<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_check">Only Music</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="ad_unit_banner">ca-app-pub-</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_unit_interstitial">ca-app-pub-</string>
    <string name="app_name">Floating Tube Player</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="categories">Categories</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_new_playlist">New playlist</string>
    <string name="editext_hint">Enter keyword to search</string>
    <string name="editext_hint_create_new_playlist">Playlist name</string>
    <string name="editext_text_create_new_playlist">Playlist %s</string>
    <string name="empty_video_ontop_fragment">No result</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="full_screen_button">Full Screen</string>
    <string name="genres">Genres</string>
    <string name="had_been_added_play_queue">Already exists in the playlist!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_screen">Most Popular</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="key_string_favorite">Favorite</string>
    <string name="key_string_watched">History</string>
    <string name="label_create_playlist">Create Playlist</string>
    <string name="label_playlist">Playlist</string>
    <string name="lable_exit">Exit</string>
    <string name="lable_no">No</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mess_exit_application">do you want rate this app to play store</string>
    <string name="message_overlay_permission">please allow Draw over other apps permission</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="my_favorite_song">My Favorite</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="network_connected">Network connected</string>
    <string name="network_disconnect">Network disconnect. Please check your network</string>
    <string name="null_time">0:00</string>
    <string name="number_count_format">%s views</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="play_button">Play</string>
    <string name="playing_title">Player</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="remove_all_video_from_playlist">Removed all video from %s</string>
    <string name="remove_video_from_playlist">Removed video from %s</string>
    <string name="search_menu_title">Search</string>
    <string name="see_all_more">More</string>
    <string name="sleep_timer_activity">Sleep Timer</string>
    <string name="splash_app_name_desc">Listen to millions of free music</string>
    <string name="startapp_ads_app_id">210192105</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stream_via_wifi_only_toast">You already setting stream video via Wifi Only. Please check your settings!</string>
    <string name="sub_lable_auto_next">Auto play next when end a video</string>
    <string name="sub_lable_clear_history">Clear history</string>
    <string name="sub_lable_feed_back_app">Send us your feedback</string>
    <string name="sub_lable_rate_app">Rate the app and leave your review on the Google Play Store</string>
    <string name="sub_lable_share_app">Share app with your contacts</string>
    <string name="text_item_play_all_list">Play all list</string>
    <string name="title_country_top_chart_current">Top Chart %s</string>
    <string name="title_dashboard">Discover</string>
    <string name="title_home">Top Tracks</string>
    <string name="title_notifications">Music</string>
    <string name="title_overlay_permission">Permission required</string>
    <string name="title_playlist">Playlist</string>
    <string name="top_world">Top Chart Countries</string>
    <string name="video_added_to_playlist">Video added to %s</string>
    <string name="youtube_error">Oops!</string>
    <string name="youtube_terms">you tube do not allow app play in background</string>
    <string name="youtube_terms_alert">"sorry, you screen is lock"</string>
</resources>
