<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/view_discover" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include layout="@layout/row_new_music" />
            <TextView android:textSize="@dimen/text_size_xxl" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/top_world" android:paddingStart="20.0dip" android:textColor="#FFFFFF" android:paddingEnd="0.0dip" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerViewTopChartWorld" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#FFFFFF" android:textSize="@dimen/text_size_xxl" android:paddingTop="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/genres" android:layout_weight="1.0" android:paddingStart="20.0dip" android:paddingEnd="0.0dip" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
                <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@id/btnMoreGenres" android:layout_width="wrap_content" android:layout_height="wrap_content" app:cardElevation="3.0dip" app:cardUseCompatPadding="true" app:contentPadding="0.0dip">
                    <TextView android:textSize="@dimen/text_size_l" android:textColor="#FE5695" android:gravity="center" android:background="#282349" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/see_all_more" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerViewGenres" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>